--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,10 @@ einops==0.3.0
 matplotlib==3.5.1
 numpy==1.20.3
 nystrom-attention==0.0.9
-omegaconf==2.2.3
+
 opencv-python==4.2.0.34
-opencv-python-headless==4.2.0.34
+opencv-python-headless==4.9.0.80
 pandas==1.2.3
-Pillow==8.4.0
+pillow==10.2.0
 pytorch-lightning==1.2.3
 
